# Galaga-Like-3D

./: CMakeLists.txt  Makefile  README.md
resources/shaders/: flash-web.fs  flash.fs
src/: Laser.cpp  Laser.h  Makefile  Meteor.cpp  Meteor.h  Player.cpp  Player.h  Settings.h  TImer.cpp  Timer.h  fun.cpp  fun.h  main.cpp  resource_dir.cpp
